--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,8 @@ subprojects {
 
     dependencies {
         compile(
-                'com.google.guava:guava:14.0.1'
+                'com.google.guava:guava:14.0.1',
+                'org.slf4j:slf4j-api:1.7.5'
         )
         testCompile(
                 'junit:junit:4.11'
