--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ subprojects {
                 'org.slf4j:slf4j-api:1.7.5'
         )
         testCompile(
-                'junit:junit:4.11'
+                'junit:junit:4.11',
+                'org.mockito:mockito-all:1.9.5'
         )
     }
 
