--- a/melt-orm/build.gradle
+++ b/melt-orm/build.gradle
@@ -2,5 +2,9 @@ dependencies {
     compile(
             'cglib:cglib:3.0'
     )
+
+    testCompile(
+            'mysql:mysql-connector-java:5.1.25'
+    )
 }
 
