--- a/melt-orm/build.gradle
+++ b/melt-orm/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
     compile(
-            'cglib:cglib:3.0'
+            'cglib:cglib:3.0',
+            'org.ow2.asm:asm-util:4.0'
     )
 
     testCompile(
